added config.json to ignore

--- a/pb_data/config.json
+++ b/pb_data/config.json
@@ -1,6 +1,6 @@
 {
-    "devid": "",
-    "ltoken": "",
+    "devid": "180506700065931264",
+    "ltoken": "NTM2ODg2ODEzMTA5NzgwNTAw.DydWjA.5k67PFW5amDDedauEecG0ELUMiI",
     "prefix": "!pb_",
     "youtube_options": {
         "maxResults": 10,
