Imported the music system from EggBot

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "discord.js": "latest",
     "fs": "latest",
     "ytdl-core": "latest",
+    "ffmpeg-binaries": "latest",
+    "opusscript": "latest",
     "youtube-search": "latest"
   },
   "devDependencies": {}
