--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "fs": "latest",
     "ytdl-core": "latest",
     "ffmpeg-binaries": "latest",
-    "node-opus": "latest",
+    "-opus": "latest",
     "youtube-search": "latest"
   },
   "devDependencies": {}
