--- a/pb_data/config.json
+++ b/pb_data/config.json
@@ -1,10 +1,10 @@
 {
     "devid": "180506700065931264",
-    "ltoken": "NTM2ODg2ODEzMTA5NzgwNTAw.XVbYEA.6R0lf47eDEq3BjLqz-93ZRkxs2Y",
+    "ltoken": "",
     "prefix": "!p ",
     "youtube_options": {
         "maxResults": 10,
-        "key": "AIzaSyBzfltGUebuyQfniTA792Uz3NHipWwEzQU",
+        "key": "",
         "type": "video"
     }
 }
